[gd_scene load_steps=6 format=3 uid="uid://b6dhldkdwokp8"]

[ext_resource type="Script" path="res://scripts/items/bomb_gun.gd" id="1_h66ei"]
[ext_resource type="Texture2D" uid="uid://b6xrwljja172s" path="res://textures/items/bomb_gun/gun.png" id="2_yltk1"]
[ext_resource type="Texture2D" uid="uid://cfrcp8jg0bs6g" path="res://textures/items/bomb_gun/bubble.png" id="3_mympu"]
[ext_resource type="AudioStream" uid="uid://d01dyrffpmh04" path="res://sfx/items/poison_wand/poison_spit.wav" id="4_bcqwx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lgkxf"]
radius = 4.0
height = 20.0

[node name="bomb_gun" type="Area2D"]
script = ExtResource("1_h66ei")

[node name="gun" type="Sprite2D" parent="."]
texture = ExtResource("2_yltk1")

[node name="bubble" type="Sprite2D" parent="."]
position = Vector2(6, 0)
texture = ExtResource("3_mympu")
offset = Vector2(4, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lgkxf")

[node name="spit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bcqwx")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="used" from="." to="." method="_on_used"]
